--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     margin: 0;
     font-family: "Open Sans", sans-serif;
-    background-color: #fbf9de;
+    background-color: #9a98853b;
     color: #333;
     font-size: 16px;
 }
@@ -27,7 +27,7 @@ body {
 }
 
 .fa-github-alt {
-    color: #f86d58;
+    color: #000000;
 }
 
 img {
@@ -42,7 +42,7 @@ h1 {
     font-size: 3.5em;
     text-align: center;
     font-family: "Oswald", sans-serif;
-    background-color: #483978;
+    background-color:  #0caadaf0;
     color: #fff;
     text-transform: uppercase;
     border-top-left-radius: 20px;
@@ -64,7 +64,7 @@ h1 {
 .circle {
     width: 20px;
     height: 20px;
-    background-color: #483978;
+    background-color: #000000;
     border-radius: 100%;
     z-index: 99;
     align-self: center;
@@ -80,7 +80,7 @@ h1 {
 h3 {
     width: 100%;
     text-align: center;
-    color: #f86d58;
+    color: #2fc4da;
 }
 
 ul {
@@ -107,7 +107,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #483978;
+    background-color:  #0caadaf0;
     color: white;
     font-size: 18px;
     padding-bottom: 2em;
@@ -120,6 +120,7 @@ ul {
 
 .user-info img {
     border-radius: 100%;
+    border: 5px solid white;
 }
 
 .user-info div {
@@ -135,7 +136,7 @@ ul {
     width: 100%;
     margin: 0;
     padding: 0;
-    border-bottom: 1px solid #9b8dc9;
+    border-bottom: 1px solid #00000026;
     padding-bottom: 19px;
 }
 
@@ -144,7 +145,7 @@ ul {
     margin-top: 1em;
     padding: 1em;
     margin-bottom: 1em;
-    border: 2px solid #483978;
+    border: 2px solid  #000000;
 }
 
 section.repo-data {
@@ -173,7 +174,7 @@ section.repo-data {
 .repo-list li {
     width: 90%;
     margin: 1em 0;
-    border: 1px solid #f86d58;
+    border: 1px solid  #0caadaf0;
     padding: 0.5em;
 }
 
@@ -209,12 +210,12 @@ section.repo-data {
     margin-top: 2em;
     cursor: pointer;
     display: block;
-    background-color: #483978;
-    border: 1px solid #483978;
+    background-color: #3ac4d9;
+    border: 1px solid #3ac4d9;
 }
 
 .repo-data .visit:hover {
-    background-color: #2f2550;
+    background-color: #3ac4d9bc;
     border: 1px solid #ccc;
 }
 
